--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   height: 350px;
   align-items: center;
+  position: relative;
 
   .image {
     width: 100%;
@@ -11,6 +12,16 @@
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
+  }
+
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+    .custom-button {
+      opacity: 0.7;
+      display: flex;
+    }
   }
 
   .collection-footer {
@@ -28,5 +39,12 @@
     .price {
       width: 10%;
     }
+  }
+  .custom-button {
+    position: absolute;
+    top: 255px;
+    opacity: 0.7;
+    display: none;
+    width: 80%;
   }
 }
